objects/ssot__RegulationClause__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulation Clause Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastVersionNumber__c</fullName>
        <label>Last Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRegulationClauseId__c</fullName>
        <label>Parent Regulation Clause</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceDocumentsLinkUrl__c</fullName>
        <label>Reference Documents Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulationId__c</fullName>
        <label>Regulation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040561341_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulationClause_ParentRegulationCla_rel</label>
        <referenceTo>ssot__RegulationClause__dlm</referenceTo>
        <relationshipLabel>RegulationClause_ParentRegulationCla_rel</relationshipLabel>
        <relationshipName>rel_1731040561341_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040577014_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulationClause_RegulationId_map_Re_rel</label>
        <referenceTo>ssot__Regulation__dlm</referenceTo>
        <relationshipLabel>RegulationClause_RegulationId_map_Re_rel</relationshipLabel>
        <relationshipName>rel_1731040577014_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>